# aoc-2025

./: .gitignore  Cargo.toml  README.md  get_input.sh
aoc-runner/src/: analyzer.rs  day.rs  lib.rs
benches/: aoc_2025_bench.rs
derive-aoc-runner/: Cargo.toml
derive-aoc-runner/src/: lib.rs
src/: main.rs
src/common/: chinese_remainder.rs  coord.rs  dimensional_map.rs  dir.rs  iter.rs  mod.rs  transform.rs  v2.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
