[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = { path = "./aoc-runner" }
derive-aoc-runner = { path = "./derive-aoc-runner" }
criterion = "0.5.1"
fxhash = "0.2.1"
rayon = "1.8.0"
num = "0.4.3"
indoc = "2.0.5"
itertools = "0.13.0"
regex = "1.11.1"
bit-set = "0.8.0"
cached = "0.54.0"

[[bench]]
name = "aoc_2025_bench"
harness = false
